--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@
 # Copy this file to config.local.js for local development
 
 # Production API URL (update this with your deployed backend URL)
-PRODUCTION_API_URL=https://your-actual-render-url.onrender.com
+PRODUCTION_API_URL=https://tictactoe-qlearning.onrender.com
 
 # Local development API URL
 LOCAL_API_URL=http://localhost:5001
