--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -4,12 +4,8 @@ services:
     name: tictactoe-api
     env: python
     plan: free
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && gunicorn main:app
+    buildCommand: pip install -r requirements.txt
+    startCommand: cd backend && gunicorn main:app --bind 0.0.0.0:$PORT --timeout 30
     envVars:
       - key: FLASK_ENV
         value: production
-      - key: PORT
-        value: 10000
-      - key: HOST
-        value: 0.0.0.0
