--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,67 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  # Test Backend API
+  test-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Test backend API endpoints
+        run: |
+          cd backend
+          python -c "
+          from main import app
+          import json
+          
+          print('Testing Flask app imports...')
+          assert app is not None, 'Flask app failed to initialize'
+          
+          print('Testing Perfect Minimax agent...')
+          from agents.perfect_agent import PerfectMinimaxAgent
+          agent = PerfectMinimaxAgent()
+          assert agent is not None, 'Agent failed to initialize'
+          
+          print('Testing game engine...')
+          from core.tictactoe import TicTacToe
+          game = TicTacToe()
+          assert game is not None, 'Game engine failed to initialize'
+          
+          print('All backend tests passed!')
+          "
+      
+      - name: Test Render.com backend connectivity
+        run: |
+          echo "Testing Render.com backend API..."
+          HEALTH_RESPONSE=$(curl -s -w "\n%{http_code}" https://tictactoe-qlearning.onrender.com/api/health)
+          HTTP_CODE=$(echo "$HEALTH_RESPONSE" | tail -n1)
+          RESPONSE_BODY=$(echo "$HEALTH_RESPONSE" | head -n1)
+          
+          echo "HTTP Status: $HTTP_CODE"
+          echo "Response: $RESPONSE_BODY"
+          
+          if [ "$HTTP_CODE" != "200" ]; then
+            echo "Warning: Backend API returned status $HTTP_CODE"
+            echo "Deployment will continue, but backend may need attention"
+          else
+            echo "Backend API is healthy!"
+          fi
+
   # Build job
   build:
     runs-on: ubuntu-latest
+    needs: test-backend
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,8 +93,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire frontend/public directory
-          path: './frontend/public'
+          # Upload root directory (contains index.html)
+          path: '.'
 
   # Deployment job
   deploy:
@@ -49,3 +107,10 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      
+      - name: Verify deployment
+        run: |
+          echo "GitHub Pages deployed!"
+          echo "Frontend URL: https://xircons.github.io/tictactoe-qlearning/"
+          echo "Backend URL: https://tictactoe-qlearning.onrender.com"
+          echo "Game is ready to play!"
